@@ -2319,8 +2319,19 @@ elf_i386_relocate_section (bfd *output_bfd,
 	  /* r_symndx will be zero only for relocs against symbols
 	     from removed linkonce sections, or sections discarded by
 	     a linker script.  */
-	  if (r_symndx == 0
-	      || (input_section->flags & SEC_ALLOC) == 0)
+	  if (r_symndx == 0)
+	    {
+	      /* Zero the section contents.  eh_frame generated by old
+		 versions of gcc isn't edited by elf-eh-frame.c, so
+		 FDEs for discarded linkonce functions might remain.
+		 Putting zeros here will zero such FDE's address range.
+		 This is a hint to unwinders and other consumers of
+		 exception handling info that the FDE is invalid.  */
+	      bfd_put_32 (input_bfd, 0, contents + rel->r_offset);
+	      continue;
+	    }
+
+	  if ((input_section->flags & SEC_ALLOC) == 0)
 	    break;
 
 	  if ((info->shared
